--- a/maven/maven-slf4j/pom.xml
+++ b/maven/maven-slf4j/pom.xml
@@ -27,8 +27,17 @@
     <groupId>com.paytronix.utils.maven</groupId>
     <artifactId>maven-slf4j</artifactId>
     <packaging>jar</packaging>
-    <name>Paytronix Maven Utils - SLF4J Logging</name>
     <version>1.0.0-SNAPSHOT</version>
+
+    <name>Paytronix Maven Utils - SLF4J Logging</name>
+    <description>Library to allow logging via SLF4j from Maven plugins by using the Maven logger. Gratefully copied from https://github.com/carrot-garden/carrot-maven</description>
+    <licenses>
+        <license>
+            <name>OSI BSD</name>
+            <url>http://www.opensource.org/licenses/bsd-license.php</url>
+        </license>
+    </licenses>
+
 
     <dependencies>
         <dependency>
