--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -27,9 +27,13 @@
 
     <groupId>com.paytronix.utils</groupId>
     <artifactId>validation</artifactId>
-    <packaging>jar</packaging>
-    <name>Paytronix Utils - Validation</name>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>Paytronix Utils - Validation</name>
+    <description>A library of standard validation functions and tools to compose them both for single and multiple values.</description>
+    <url>https://paytronix.github.com/utils-open</url>
+
 
     <build>
         <plugins>
@@ -42,6 +46,35 @@
                         <arg>-unchecked</arg>
                         <arg>-Ydependent-method-types</arg>
                     </args>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.2</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>net.alchim31.maven</groupId>
+                            <artifactId>scala-maven-plugin</artifactId>
+                            <version>3.0.1</version>
+                            <configuration>
+                                <scalaVersion>${scala.version}</scalaVersion>
+                                <jvmArgs>
+                                    <jvmArg>-Xss2048K</jvmArg>
+                                    <jvmArg>-Xmx1G</jvmArg>
+                                </jvmArgs>
+                                <args>
+                                    <arg>-deprecation</arg>
+                                    <arg>-unchecked</arg>
+                                    <arg>-Ydependent-method-types</arg>
+                                </args>
+                            </configuration>
+                        </plugin>
+                    </reportPlugins>
                 </configuration>
             </plugin>
         </plugins>
