[no issue] update to specs2

--- a/interchange/pom.xml
+++ b/interchange/pom.xml
@@ -62,8 +62,8 @@
             <artifactId>scala-library</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_${scala.compatibility.version}</artifactId>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2_${scala.compatibility.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>com.paytronix.utils</groupId>
