--- a/extendedreflection/pom.xml
+++ b/extendedreflection/pom.xml
@@ -55,8 +55,8 @@
             <artifactId>scalap</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_${scala.compatibility.version}</artifactId>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2_${scala.compatibility.version}</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
