--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,8 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.7</version><scope>test</scope>
+                <version>4.7</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
@@ -107,9 +108,9 @@
                 <version>${scala.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.scala-tools.testing</groupId>
-                <artifactId>specs_${scala.compatibility.version}</artifactId>
-                <version>1.6.9</version>
+                <groupId>org.specs2</groupId>
+                <artifactId>specs2_${scala.compatibility.version}</artifactId>
+                <version>1.9</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
