--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.9.1-1</scala.version>
+        <scala.version>2.9.2</scala.version>
         <scala.compatibility.version>2.9.1</scala.compatibility.version>
     </properties>
 
