--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
                 <artifactId>maven-core</artifactId>
                 <version>3.0.4</version>
             </dependency>
+            <dependency>
+                <groupId>org.scalaz</groupId>
+                <artifactId>scalaz-core_${scala.compatibility.version}</artifactId>
+                <version>7.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
