--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
             <dependency>
                 <groupId>org.scalaz</groupId>
                 <artifactId>scalaz-core_${scala.compatibility.version}</artifactId>
-                <version>7.0-SNAPSHOT</version>
+                <version>7.0.0-M1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
