--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -82,6 +82,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.chuusai</groupId>
+            <artifactId>shapeless_${scala.compatibility.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.paytronix.utils</groupId>
+            <artifactId>scala</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.thoughtworks.paranamer</groupId>
             <artifactId>paranamer</artifactId>
         </dependency>
@@ -110,10 +118,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.chuusai</groupId>
-            <artifactId>shapeless_${scala.compatibility.version}</artifactId>
         </dependency>
     </dependencies>
 </project>
