[issue24138] add JS DSL that makes writing all the JS inside the snippet easier, simplifying implementation of AJAXy interfaces

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>java</module>
+        <module>lift</module>
         <module>packaging</module>
         <module>scala</module>
         <module>standalone</module>
@@ -83,6 +84,11 @@
                         <artifactId>joda-time</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>net.liftweb</groupId>
+                <artifactId>lift-webkit_${lift.scala.compatibility.version}</artifactId>
+                <version>${lift.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
