--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils</groupId>
         <artifactId>parent</artifactId>
-        <version>13.0-SNAPSHOT</version>
+        <version>13.0-streaming-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>scala</artifactId>
     <packaging>jar</packaging>
-    <version>13.0-SNAPSHOT</version>
+    <version>13.0-streaming-SNAPSHOT</version>
 
     <name>Paytronix Utils - Miscellaneous Scala</name>
     <description>Library with various Scala utilities and types.</description>
