--- a/lift/pom.xml
+++ b/lift/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>paytronix.utils.internal</groupId>
         <artifactId>parent</artifactId>
-        <version>13.2-streaming-SNAPSHOT</version>
+        <version>13.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -12,7 +12,7 @@
     <artifactId>lift</artifactId>
     <packaging>jar</packaging>
     <name>Paytronix Internal Utils - Lift-related Utilities</name>
-    <version>13.2-streaming-SNAPSHOT</version>
+    <version>13.3-SNAPSHOT</version>
 
     <build>
         <plugins>
