[issue26661] support Joda Time in validation library

--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -98,6 +98,14 @@
             <artifactId>javax.inject</artifactId>
         </dependency>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-convert</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
