[no issue] bump version to 13.4-angus-SNAPSHOT and update dependencies on Avro to 1.7.4 (from 1.6.3) and Scalaz to 7.0.2 (from 7.0.0-M5). remove unused json Lens code since LensT vanished from scalaz

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>13.3-pxscrocodile-SNAPSHOT</version>
+    <version>13.4-angus-SNAPSHOT</version>
 
     <name>Paytronix Utils - Parent</name>
     <inceptionYear>2009</inceptionYear>
@@ -192,7 +192,7 @@
             <dependency>
                 <groupId>org.scalaz</groupId>
                 <artifactId>scalaz-core_${scala.compatibility.version}</artifactId>
-                <version>7.0.0-M5</version>
+                <version>7.0.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
