--- a/interchange/pom.xml
+++ b/interchange/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils</groupId>
         <artifactId>parent</artifactId>
-        <version>13.3-pxscrocodile-SNAPSHOT</version>
+        <version>13.4-angus-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>interchange</artifactId>
     <packaging>jar</packaging>
-    <version>13.3-pxscrocodile-SNAPSHOT</version>
+    <version>13.4-angus-SNAPSHOT</version>
 
     <name>Paytronix Utils - Interchange</name>
     <description>Library which allows for reflection-based transcoding of Scala and Java objects to/from JSON, Avro, and MongoDB with minimal metadata.</description>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
-            <version>1.6.2</version>
+            <version>1.7.4</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
