--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
                 <version>${lift.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.rogach</groupId>
+                <artifactId>scallop_2.9.2</artifactId>
+                <version>0.6.5~4~SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
                 <version>${scala.version}</version>
