--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>lift-util_${lift.scala.compatibility.version}</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.rogach</groupId>
+            <artifactId>scallop_2.9.2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
