[issue27253] bump various versions to get a new version of scallop and bump to scala 2.9.3

--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -83,7 +83,7 @@
     <dependencies>
         <dependency>
             <groupId>com.chuusai</groupId>
-            <artifactId>shapeless_${scala.compatibility.version}</artifactId>
+            <artifactId>shapeless_2.9.2</artifactId>
         </dependency>
         <dependency>
             <groupId>com.paytronix.utils</groupId>
