--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 
     <developers>
         <developer>
-            <id>rmellgren</id>
-            <name>Ross Mellgren</name>
-            <email>rmellgren@paytronix.com</email>
+            <id>rmacleod</id>
+            <name>Ross MacLeod</name>
+            <email>rmacleod@paytronix.com</email>
         </developer>
     </developers>
 
@@ -75,8 +75,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.9.2</scala.version>
-        <scala.compatibility.version>2.9.2</scala.compatibility.version>
+        <scala.version>2.9.3</scala.version>
+        <scala.compatibility.version>2.9.3</scala.compatibility.version>
         <lift.version>2.4</lift.version>
         <lift.scala.compatibility.version>2.9.1</lift.scala.compatibility.version>
     </properties>
@@ -122,7 +122,7 @@
             <dependency>
                 <groupId>org.specs2</groupId>
                 <artifactId>specs2_${scala.compatibility.version}</artifactId>
-                <version>1.9</version>
+                <version>1.12.4.1</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -176,8 +176,8 @@
             </dependency>
             <dependency>
                 <groupId>com.chuusai</groupId>
-                <artifactId>shapeless_${scala.compatibility.version}</artifactId>
-                <version>1.2.0</version>
+                <artifactId>shapeless_2.9.2</artifactId>
+                <version>1.2.4</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
@@ -276,7 +276,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.12</version>
                 <configuration>
                     <argLine>-Xmx512m</argLine>
                 </configuration>
