--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -55,7 +55,7 @@
         </dependency>
         <dependency>
             <groupId>org.rogach</groupId>
-            <artifactId>scallop_2.9.2</artifactId>
+            <artifactId>scallop_${scala.compatibility.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -76,7 +76,7 @@
         </dependency>
         <dependency>
             <groupId>org.squeryl</groupId>
-            <artifactId>squeryl_${scala.compatibility.version}</artifactId>
+            <artifactId>squeryl_2.9.2</artifactId>
         </dependency>
         <dependency>
             <groupId>paytronix.utils.internal</groupId>
