--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>paytronix.utils.internal</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>14.1-beaker-SNAPSHOT</version>
+    <version>14.1-droop-SNAPSHOT</version>
 
     <name>Paytronix Internal Utils - Parent</name>
 
